# GoodreadsVibe

./: .env  DEPLOYMENT.md  GENRE_NORMALIZATION.md  Makefile  README.md  TROUBLESHOOTING.md  create_sample_db.py  embed_data.sqlite  env.example  index.html  pyproject.toml  requirements.txt  sample-data.csv  script.js  start_app.py  styles.css
app/: __init__.py  api.py  cluster.py  comprehensive_analysis.py  db.py  embed.py  ingest.py  insights.py  llm_recommendations.py  profile_insights.py  recommend.py  session_db.py  usage_logger.py
archive/: README.md  comprehensive_analysis_prompt.md  enrich.py  insight_prompt.md  recommend.py  recommendation_prompt.md
prompts/: comprehensive_analysis_prompt.md  comprehensive_analysis_prompt_parallel.md  detailed_analysis_prompt.md  insight_prompt.md  profile_prompt.md  quick_analysis_prompt.md  recommendation_prompt.md
tests/: __init__.py  test_cluster.py  test_ingest.py  test_insights.py  test_recommend.py
ui/: __init__.py  streamlit_app.py
